--- a/templates/test.html
+++ b/templates/test.html
@@ -7,6 +7,8 @@
 <body>
 <h1>Какая вы рыба?</h1>
 
+<p>Описание теста</p>
+
 <form action="/answer">
     <strong>Как вас зовут?</strong>
     <input name="name" /><br>
