--- a/templates/test.html
+++ b/templates/test.html
@@ -7,7 +7,7 @@
 <body>
 <h2>Какая вы рыба?</h2>
 
-<p>Описание теста</p>
+<p>Описание теста</p>defdf
 
 <form action="/answer">
     <strong>Как вас зовут?</strong>
